--- a/css/styles.css
+++ b/css/styles.css
@@ -2437,8 +2437,8 @@ h5 {
   }
 
   p {
-    font-size  : clamp(0.7rem, 4.5vw, 8vw) !important;
-    line-height: clamp(0.7rem, 6vw, 8vw) !important;
+    font-size: clamp(0.8rem, 0.7vw, 3rem) !important;
+    line-height: clamp(0.7rem, 0.9vw, 8vw) !important;
   }
 
   .F-center {
